# unb-cca-mqac

./: .env.example  .gitignore  Makefile  README.md  debug_data.py  debug_zscores_start.py  defaults.yaml  inspect_macro.py  inspect_phase1_data.py  inspect_qval.py  metadata.yaml  pdf.yaml  pyproject.toml  references.bib  requirements.txt  template.tex  test_compile.tex
.github/: copilot-instructions.md
configs/: analysis_overrides.json  params.yaml
content/: analise_decaimento_informacional.md  nota-tecnica.md
data/models/: xgb_classification_5d.pkl  xgb_model.pkl  xgb_regression_5d.pkl
data/outputs/: backtest_equity_curves.parquet  backtest_results.json  capm_results.json  collection_log.json  descriptive_stats.json  dynamic_metrics.json  dynamic_results.parquet  factor_results.json  full_model_comparison.json  m5_horizon_predictions.parquet  m5_predictions.parquet  m6_comparison.json  m6_horizon_predictions.parquet  m6_metrics.json  macro_metrics.json  macro_results.parquet  model_comparison.json  naive_errors.parquet  naive_metrics.json  nested_models_results.json  oos_results.json  rolling_r2.parquet
data/processed/: ibovespa_regimes.parquet  m6_backtest_results.parquet  m6_predictions.parquet  macro_forecasts.parquet  ml_dataset.parquet
docs/: ROTEIRO_STRATEGY_FAIR_VALUE.md
legacy/: backtest_fair_value.py  backtest_m5.py  backtest_m6.py  gen_fig_beta.py  gen_fig_information_decay.py  gen_fig_naive.py  gen_fig_variance.py  gen_m6_horizon.py  gen_table_descriptive.py  gen_table_macro.py  gen_table_models.py  train_m5_models.py
notebooks/: 00_data_ingestion_config.ipynb  01_data_ingestion.ipynb  05_valuation_analysis.ipynb  06_scenario_analysis.ipynb
notebooks/legacy/: 02_capm_analysis.ipynb  03_descriptive_stats.ipynb  04_qval_scoring.ipynb
output/: debug.tex
src/: __init__.py
src/analysis/: backtest_fair_value.py  backtest_m5.py  descriptive_stats.py  dynamic_capm.py  estimate_nested_models.py  full_model_comparison.py  macro_model.py  oos_validation.py  train_m5_horizon.py
src/assets/: __init__.py  gen_advanced_figures.py  gen_backtest_comparison.py  (+32 more)
templates/: authorities.tex  headings.tex  preamble.tex  titlepage.tex  toc.tex
(+86 files in other folders)
